fixed spacing on leadership after breaking from insight

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -763,7 +763,7 @@ section[role="main"] .view-article {
   display: block;
   float: left;
   width: 199px;
-/*  margin: 0px;*/
+  margin: 40px 19px 0 19px;
   line-height: 22px;
 }
 
@@ -782,11 +782,12 @@ section[role="main"] .view-article {
   width: 199px;
   height: 212px;
   display: block;
-  margin: 40px 19px 0 19px;
+ /* margin: 40px 19px 0 19px;*/
 }
 
-.custom-fancybox-wrapper ul li.last a {
-  margin: 40px 0 0 0;
+
+section[role="leader"] .wrap {
+  padding: 0px;
 }
 
 section[role="leader"].custom-fancybox-wrapper.executive-team ul li a:hover,
@@ -3141,6 +3142,7 @@ section[role="insight"].custom-fancybox-wrapper {
 }
 section[role="insight"].custom-fancybox-wrapper ul li a {
   height: 320px;
+  margin: 40px 19px 0 19px;
 }
 
 section[role="insight"].custom-fancybox-wrapper .tagline {
